src/objects/QPMS__Audit__c.object
<CustomObject>
    <description>This is Audit object.</description>
    <fields>
        <fullName>QPMS__Active_Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Active Checklist</label>
        <referenceTo>QPMS__Checklist__c</referenceTo>
        <relationshipLabel>Audits</relationshipLabel>
        <relationshipName>Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Additional_Auditors__c</fullName>
        <description>To capture  Additional Auditors ids</description>
        <label>Additional Auditors</label>
        <length>40000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Allowed_Days__c</fullName>
        <description>This field holds allowdays for current approval of this record</description>
        <label>Allowed Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__ApprovalProcess__c</fullName>
        <description>to hold approval for audit, observation or owner</description>
        <label>ApprovalProcess</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Audit Observation Approval</fullName>
                </value>
                <value>
                    <fullName>Change Lead Auditor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Group__c</fullName>
        <label>Approval Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Process_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approval Process Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>flag for audit approval</description>
        <label>Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Approval_Status__c</fullName>
        <description>Holds the status of audit approval</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Approver_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the Approver value for audit</description>
        <label>Approver 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AD_Approver1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AD_Approver2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the Approver value for audit</description>
        <label>Approver 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AD_Approver3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds the Approver value for audit</description>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AD_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__AuditReason__c</fullName>
        <description>This field is used to store AuditReason</description>
        <label>Audit Reason</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Age__c</fullName>
        <description>To calculate audit age based on start date and created date OR  close date and created date</description>
        <formula>IF( ISBLANK( QPMS__Closed_Date__c ) , (TODAY() - IF(ISBLANK(QPMS__Initiated_Date__c),DATEVALUE(CreatedDate),DATEVALUE(QPMS__Initiated_Date__c))),  (QPMS__Closed_Date__c- IF(ISBLANK(QPMS__Initiated_Date__c),DATEVALUE(CreatedDate),DATEVALUE(QPMS__Initiated_Date__c))  ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Category__c</fullName>
        <description>To store Audit Category values</description>
        <label>Audit Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Surveillance</fullName>
                </value>
                <value>
                    <fullName>Re-Certification</fullName>
                </value>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Unannounced</fullName>
                </value>
                <value>
                    <fullName>Re-Audit</fullName>
                </value>
                <value>
                    <fullName>For Cause</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Cost__c</fullName>
        <description>To Store the Audit Cost details</description>
        <label>Audit Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Final_Result__c</fullName>
        <description>To hold the vlaue PASS/FAIL</description>
        <label>Audit Final Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Man_Days__c</fullName>
        <description>to Store Audit Man Days data</description>
        <label>Audit Man Days</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Number__c</fullName>
        <formula>HYPERLINK($Setup.QPMS__QC_settings__c.QPMS__URL__c+&apos;/apex/Audit?Id=&apos;+Id,Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Program_Title__c</fullName>
        <description>To display the audit program HyperLink</description>
        <formula>QPMS__Audit_Program__r.QPMS__AuditProgram_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>to hold auditprogram value</description>
        <label>Audit Program</label>
        <referenceTo>QPMS__Audit_Program__c</referenceTo>
        <relationshipLabel>Audits (Audit Program)</relationshipLabel>
        <relationshipName>Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Reason__c</fullName>
        <description>To hold audit reason</description>
        <label>Audit Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Standards__c</fullName>
        <description>to store audit standards</description>
        <label>Audit Standards</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ISO 9001-2008</fullName>
                </value>
                <value>
                    <fullName>ISO 9001-2008 : 4 Quality management system</fullName>
                </value>
                <value>
                    <fullName>ISO 9001-2008 : 4 Quality management system : 4.1 General requirements</fullName>
                </value>
                <value>
                    <fullName>ISO 9001-2008 : 4 Quality management system : 4.2 Documentation requirements</fullName>
                </value>
                <value>
                    <fullName>ISO 9001-2008 : 5 Management responsibility</fullName>
                </value>
                <value>
                    <fullName>ISO 9001-2008 : 5 Management responsibility : 5.1 Management commitment</fullName>
                </value>
                <value>
                    <fullName>ISO 9001-2008 : 5 Management responsibility : 5.2 Customer focus</fullName>
                </value>
                <value>
                    <fullName>ISO 9001-2008 : 4 Quality management system : 4.2 Documentation requirements : 4.2.3 Control of documents</fullName>
                </value>
                <value>
                    <fullName>ISO 9001-2008 : 4 Quality management system : 4.2 Documentation requirements : 4.2.2 Quality manual</fullName>
                </value>
                <value>
                    <fullName>ISO 9001-2008 : 4 Quality management system : 4.2 Documentation requirements : 4.2.4 Control of records</fullName>
                </value>
                <value>
                    <fullName>ISO 9001:2015</fullName>
                </value>
                <value>
                    <fullName>AS9120B</fullName>
                </value>
                <value>
                    <fullName>ASA-100</fullName>
                </value>
                <value>
                    <fullName>FAA Part 145</fullName>
                </value>
                <value>
                    <fullName>EASA Part 145</fullName>
                </value>
                <value>
                    <fullName>Hazmat Transportation Regulations 49 CFR  100 - 185</fullName>
                </value>
                <value>
                    <fullName>IATA Dangerous Goods Regulations</fullName>
                </value>
                <value>
                    <fullName>Export Administration Regulations (EAR) 15 CFR  730 - 774</fullName>
                </value>
                <value>
                    <fullName>International Traffic in Arms Regulations (ITAR)  22 CFR  120 - 130</fullName>
                </value>
                <value>
                    <fullName>Occupational Safety and Health Administration (OSHA) 29 CFR  1910 -1970</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Type_Title__c</fullName>
        <description>To dispaly audittypt hyperlink</description>
        <formula>QPMS__Audit_Type__r.QPMS__Audit_Type_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>To get audit audit type data</description>
        <label>Audit Type</label>
        <referenceTo>QPMS__Audit_Type__c</referenceTo>
        <relationshipLabel>Audits</relationshipLabel>
        <relationshipName>Audits</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds Reference of &quot;Audit&quot; which was created from &quot;Planned Audit&quot; of &quot;Audit Program&quot;</description>
        <label>Audit</label>
        <referenceTo>QPMS__Audit__c</referenceTo>
        <relationshipLabel>Audits</relationshipLabel>
        <relationshipName>Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Auditors__c</fullName>
        <description>This field is for to save additional auditors</description>
        <label>Auditors</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Authorized_Entity_Group__c</fullName>
        <label>Authorized Entity Group</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Authorized_Entity__c</fullName>
        <description>To store Authorized Entity users data</description>
        <label>Authorized Entity</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Auto_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To determine whether the &quot;audit&quot; was created from &quot;planned audit&quot; automatically or manually</description>
        <label>Auto Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Business_Unit__c</fullName>
        <description>Business Units for audit objects</description>
        <label>Business Unit</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business_Unit1</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>SCO</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
                <value>
                    <fullName>Networking</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>IoT Applications</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__ChangeFieldApprovalStatus__c</fullName>
        <description>To hols the status of approvals of observations and lead auditor</description>
        <label>ChangeFieldApprovalStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__CheckListsToBeCloned__c</fullName>
        <description>This is used to  associate checklist to audit</description>
        <label>CheckListsToBeCloned</label>
        <length>60000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Clinical_Trail__c</fullName>
        <description>To save clinical triail value</description>
        <label>Clinical Trial</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Closed_Date__c</fullName>
        <description>to save close date of audit</description>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Closing_Statement__c</fullName>
        <description>To save closing statement of audit</description>
        <label>Closing Statement</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Create_Audit_Explicity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is useful for create audit  record explicitly when it is  scheduled and scheduled date is not reached</description>
        <inlineHelpText>This field is useful for create audit  record explicitly when it is  scheduled and scheduled date is not reached</inlineHelpText>
        <label>Create Audit Explicity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__CurrentApprovalSequenceNumber__c</fullName>
        <description>sequence number to sect the approvers</description>
        <label>CurrentApprovalSequenceNumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Customer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>this field is dependent on customer and shows customer record type value</description>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Audits (Customer Contact)</relationshipLabel>
        <relationshipName>Audits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field id used to store customer record type of Account object</description>
        <label>Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Audits (Customer)</relationshipLabel>
        <relationshipName>Audits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Departments__c</fullName>
        <description>To store Departments data for audit objects.</description>
        <label>Departments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Enable_Security__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Store on/off value of security</description>
        <label>Enable Security</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__End_Date__c</fullName>
        <description>To store end date of audit</description>
        <inlineHelpText>End Date for audit</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Escalation_Rule_for_Approval__c</fullName>
        <defaultValue>&apos;NONE&apos;</defaultValue>
        <description>To save Escalaton rule for all approvels</description>
        <label>Escalation Rule for Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                    <default>true</default>
                    <label>NONE</label>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Escalation_Rule_for_Task__c</fullName>
        <description>Used to choose the Rule Escalation for Task</description>
        <label>Escalation Rule for Task</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NONE</fullName>
                    <default>true</default>
                    <label>NONE</label>
                </value>
                <value>
                    <fullName>Default</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Evaluation_Type__c</fullName>
        <description>To hole Evaluation type for audit(Color|Pass\fail|Scoring)</description>
        <label>Evaluation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Scoring</fullName>
                </value>
                <value>
                    <fullName>Pass/Fail</fullName>
                </value>
                <value>
                    <fullName>Color</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Executive_Summary__c</fullName>
        <description>To save executive summary</description>
        <label>Executive Summary</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__External_Id__c</fullName>
        <description>For Data Migration/Integration purposes</description>
        <externalId>true</externalId>
        <inlineHelpText>External Id</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QPMS__External__c</fullName>
        <description>To Hold external lead auditors id values</description>
        <label>External</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Finding_Response_Grace_Period__c</fullName>
        <description>To store Finding Response Grace Period</description>
        <label>Finding Response Grace Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QPMS__Follow_Up_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To Check Follow Up Is Created or Not</description>
        <inlineHelpText>To Check Follow Up Is Created or Not</inlineHelpText>
        <label>Follow Up Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Follow_up_Audit_End_Date__c</fullName>
        <description>To store followup audit End date while audit is created</description>
        <label>Follow up Audit End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Follow_up_Audit_Start_Date__c</fullName>
        <description>to store start date of followup audit</description>
        <label>Follow up Audit Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QPMS__Follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>true/false for follow up</description>
        <label>Follow up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Followers__c</fullName>
        <description>To hold followers for this record</description>
        <inlineHelpText>To hold followers for this record</inlineHelpText>
        <label>Followers</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Initial_Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To Hold the initial submitter</description>
        <label>Initial Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audits1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiated_Date__c</fullName>
        <description>Audit Initiated Date</description>
        <inlineHelpText>Audit Initiated Date</inlineHelpText>
        <label>Initiated Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Name__c</fullName>
        <description>to display the name of initation site</description>
        <formula>IF( QPMS__Initiating_Site_Security__c = &apos;Global_Quality_Group&apos;, &apos;&apos;, IF( ISBLANK( QPMS__Initiating_Site__c ) , QPMS__Audit_Type__r.QPMS__Initiating_Site__r.Name, QPMS__Initiating_Site__r.Name ))</formula>
        <label>Initiating Site</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site_Security__c</fullName>
        <description>Stores the logged in user site public group and inherited from audit type</description>
        <inlineHelpText>Stores the logged in user site public group and inherited from audit type</inlineHelpText>
        <label>Initiating Site Security</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Initiating_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Initiation Site To Which user belongs to</description>
        <inlineHelpText>Initiation Site To Which user belongs to</inlineHelpText>
        <label>Initiating Site</label>
        <referenceTo>QPMS__Manufacturing_Site__c</referenceTo>
        <relationshipLabel>Audits (Initiating Site)</relationshipLabel>
        <relationshipName>Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Internal_Team_Group_Name__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(QPMS__Internal_Team_Group__c, LEFT(QPMS__Internal_Team_Group__c,Find(&quot;@@&quot;,QPMS__Internal_Team_Group__c)+1)
, &apos;&apos;),&quot; &quot;, &quot;&quot;)</formula>
        <label>Internal Team Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Internal_Team_Group__c</fullName>
        <description>To save internal team group name</description>
        <label>Internal Team Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Internal__c</fullName>
        <description>To store inter team selected ids</description>
        <label>Internal Audit Team</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Interviewed_Personnel__c</fullName>
        <description>To store the data of Interviewed Personnel</description>
        <label>Interviewed Personnel</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Lead_Auditor_Group_Name__c</fullName>
        <formula>SUBSTITUTE(SUBSTITUTE(QPMS__Lead_Auditor_Group__c, LEFT(QPMS__Lead_Auditor_Group__c,Find(&quot;@@&quot;,QPMS__Lead_Auditor_Group__c)+1)
, &apos;&apos;),&quot; &quot;, &quot;&quot;)</formula>
        <label>Lead Auditor Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Lead_Auditor_Group__c</fullName>
        <description>To save group name selected for Auditors</description>
        <label>Lead Auditor Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Lead_Auditor_Name__c</fullName>
        <description>To display leadauditor name in details</description>
        <formula>QPMS__Lead_Auditor__r.FirstName +&apos; &apos;+ QPMS__Lead_Auditor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Auditor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Lead_Auditor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To save leadauditor</description>
        <label>Lead Auditor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Locations__c</fullName>
        <description>To save  selected location ids</description>
        <label>Locations</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Logged_In_User_Is_Lead_Auditor__c</fullName>
        <description>Flag to check Logedin user is lead auditor or not</description>
        <formula>QPMS__Lead_Auditor__c  =  $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Logged In User Is Lead Auditor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__New_Lead_Auditor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>New Lead Auditor</description>
        <label>New Lead Auditor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Audits2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver_Lead_Auditor__c</fullName>
        <description>Note to approver for lead auditor approvals</description>
        <label>Note To Approver Lead Auditor</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Note_To_Approver__c</fullName>
        <description>To save audit approvers note</description>
        <label>Note To Approver</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Observation_Approval_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this is checked audit steps will be shown with observation approval step</description>
        <label>Observation Approval Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Observation_Approval__c</fullName>
        <description>To save Approval process for observtions status</description>
        <label>Observation Approval</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Observation_Note_To_Approver__c</fullName>
        <description>To save observation approvers note</description>
        <label>Note To Approver</label>
        <length>16768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Opening_Statement__c</fullName>
        <description>Opening statement data for audit object</description>
        <label>Opening Statement</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Process__c</fullName>
        <description>To store multi Process information</description>
        <label>Process</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Product__c</fullName>
        <description>To store multi product information</description>
        <label>Product</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Purpose__c</fullName>
        <description>to save purpose value</description>
        <label>Purpose</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Reason_For_Void__c</fullName>
        <label>Reason For Void</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Require_Follow_up__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Require Follow up?</description>
        <label>Require Follow up?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QPMS__Scope__c</fullName>
        <description>To store the Scope values</description>
        <label>Scope</label>
        <length>8000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QPMS__Sequence__c</fullName>
        <description>To hold the values of approval sequence</description>
        <label>Sequence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
                <value>
                    <fullName>40</fullName>
                </value>
                <value>
                    <fullName>50</fullName>
                </value>
                <value>
                    <fullName>60</fullName>
                </value>
                <value>
                    <fullName>70</fullName>
                </value>
                <value>
                    <fullName>80</fullName>
                </value>
                <value>
                    <fullName>90</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Signed_Off_Details__c</fullName>
        <label>Signed Off Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>